@@ -1,36 +1,28 @@
 package com.project.reactdashboard.infrastructure.stock.controllers;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.ObjectWriter;
-import com.fasterxml.jackson.databind.SerializationFeature;
-import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
 import com.project.reactdashboard.domain.stock.api.StockApi;
 import com.project.reactdashboard.domain.stock.model.StockModel;
 import com.project.reactdashboard.infrastructure.stock.controllers.mapper.StockMapper;
+import org.jetbrains.annotations.NotNull;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mock;
-import org.springframework.http.MediaType;
-import org.springframework.test.web.servlet.MockMvc;
-import org.springframework.test.web.servlet.ResultActions;
-import org.springframework.test.web.servlet.result.MockMvcResultMatchers;
-import org.springframework.test.web.servlet.setup.MockMvcBuilders;
+import org.springframework.core.ParameterizedTypeReference;
+import org.springframework.test.web.servlet.client.RestTestClient;
 
 import java.util.List;
 
 import static com.project.reactdashboard.ObjectRandomizer.randomList;
-import static com.project.reactdashboard.ObjectRandomizer.randomStockModel;
 import static com.project.reactdashboard.ObjectRandomizer.randomStockDto;
+import static com.project.reactdashboard.ObjectRandomizer.randomStockModel;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.mockito.Mockito.when;
 import static org.mockito.MockitoAnnotations.openMocks;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 public class StockControllerTest {
 
-    private MockMvc mockMvc;
+    private RestTestClient client;
 
     @Mock
     private StockMapper mapper;
@@ -41,44 +33,50 @@ public class StockControllerTest {
     @BeforeEach
     void setup() {
         openMocks(this);
-        mockMvc = MockMvcBuilders
-                .standaloneSetup(new StockController(mapper, service))
-                .build();
+        client = RestTestClient.bindToController(new StockController(mapper, service)).build();
     }
 
     @Test
-    void should_create_a_list_of_stock() throws Exception {
+    void should_create_a_list_of_stock() {
         List<StockDto> dtos = randomList(i -> randomStockDto());
         List<StockModel> stocks = randomList(i -> randomStockModel());
 
         when(mapper.toListDomain(dtos)).thenReturn(stocks);
 
-        ResultActions resultActions = mockMvc.perform(
-                post("/api/stocks/all")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(createJsonModel(stocks)));
+        Integer result = client.post()
+                .uri("/api/stocks/all")
+                .body(dtos)
+                .exchange()
+                .expectStatus().isOk()
+                .expectBody(Integer.class)
+                .returnResult()
+                .getResponseBody();
 
-        resultActions.andExpect(status().isOk());
+        assertEquals(1, result);
     }
 
     @Test
-    void should_return_a_stock() throws Exception {
+    void should_return_a_stock() {
         StockModel stockApplication = randomStockModel();
         StockDto dto = randomStockDto();
 
         when(service.findLastWorkingDayBySymbol(stockApplication.symbol())).thenReturn(stockApplication);
         when(mapper.toDto(stockApplication)).thenReturn(dto);
 
-        ResultActions resultActions = mockMvc.perform(
-                get("/api/stocks/{symbol}/last-working-day", stockApplication.symbol())
-                        .contentType(MediaType.APPLICATION_JSON));
+        StockDto result = client.get()
+                .uri("/api/stocks/{symbol}/last-working-day", stockApplication.symbol())
+                .exchange()
+                .expectStatus().isOk()
+                .expectBody(StockDto.class)
+                .returnResult()
+                .getResponseBody();
 
-        resultActions.andExpect(status().isOk())
-                .andExpect(MockMvcResultMatchers.jsonPath("id").value(dto.id()));
+        assertNotNull(result);
+        assertEquals(dto.id(), result.id());
     }
 
     @Test
-    void should_return_list_of_stock_by_symbol() throws Exception {
+    void should_return_list_of_stock_by_symbol() {
         StockModel stockApplication = randomStockModel();
         List<StockModel> stockApplications = randomList(i -> stockApplication);
         StockDto dto = randomStockDto();
@@ -87,16 +85,21 @@ public class StockControllerTest {
         when(service.findBySymbol(stockApplication.symbol())).thenReturn(stockApplications);
         when(mapper.toListDto(stockApplications)).thenReturn(dtos);
 
-        ResultActions resultActions = mockMvc.perform(
-                get("/api/stocks/{symbol}", stockApplication.symbol())
-                        .contentType(MediaType.APPLICATION_JSON));
+        List<StockDto> result = client.get()
+                .uri("/api/stocks/{symbol}", stockApplication.symbol())
+                .exchange()
+                .expectStatus().isOk()
+                .expectBody(new ParameterizedTypeReference<@NotNull List<StockDto>>(){})
+                .returnResult()
+                .getResponseBody();
 
-        resultActions.andExpect(status().isOk())
-                .andExpect(MockMvcResultMatchers.jsonPath("[0].id").value(dtos.get(0).id()));
+        assertNotNull(result);
+        assertEquals(dtos.size(), result.size());
+        assertEquals(dto.id(), result.getFirst().id());
     }
 
     @Test
-    void should_return_list_of_latest_stock() throws Exception {
+    void should_return_list_of_latest_stock() {
         StockModel stockApplication = randomStockModel();
         List<StockModel> stockApplications = randomList(i -> stockApplication);
         StockDto dto = randomStockDto();
@@ -105,19 +108,16 @@ public class StockControllerTest {
         when(service.findAllLatest()).thenReturn(stockApplications);
         when(mapper.toListDto(stockApplications)).thenReturn(dtos);
 
-        ResultActions resultActions = mockMvc.perform(
-                get("/api/stocks/latest")
-                        .contentType(MediaType.APPLICATION_JSON));
+        List<StockDto> result = client.get()
+                .uri("/api/stocks/latest")
+                .exchange()
+                .expectStatus().isOk()
+                .expectBody(new ParameterizedTypeReference<@NotNull List<StockDto>>(){})
+                .returnResult()
+                .getResponseBody();
 
-        resultActions.andExpect(status().isOk())
-                .andExpect(MockMvcResultMatchers.jsonPath("[0].id").value(dtos.get(0).id()));
-    }
-
-    private String createJsonModel(Object value) throws JsonProcessingException {
-        ObjectMapper mapper = new ObjectMapper();
-        mapper.configure(SerializationFeature.WRAP_ROOT_VALUE, false);
-        mapper.registerModule(new JavaTimeModule());
-        ObjectWriter ow = mapper.writer().withDefaultPrettyPrinter();
-        return ow.writeValueAsString(value);
+        assertNotNull(result);
+        assertEquals(dtos.size(), result.size());
+        assertEquals(dto.id(), result.getFirst().id());
     }
 }
